--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
+# user files
+*.suo
+*.user
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
+# cache files
+*.aps
+*.opensdf
+*.sdf
+ipch/
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
+# build results
+[Dd]ebug/
+[Rr]elease/
