--- a/WhaleSplash/WhaleSplash.vcxproj
+++ b/WhaleSplash/WhaleSplash.vcxproj
@@ -79,16 +79,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CustomListView.h" />
-    <ClInclude Include="DlgMain.h" />
+    <ClInclude Include="MainDialog.h" />
     <ClInclude Include="PathOfExile.h" />
     <ClInclude Include="Process.h" />
     <ClInclude Include="resources.h" />
+    <ClInclude Include="SimulateInput.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Thread.h" />
     <ClInclude Include="ThreadWatch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="MainDialog.cpp" />
     <ClCompile Include="PathOfExile.cpp" />
     <ClCompile Include="Process.cpp" />
     <ClCompile Include="stdafx.cpp">
